<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="center"
    android:orientation="vertical">


        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/app_desc"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="normal" />



        <ImageView
            android:id="@+id/brightness_toggle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/toggle_off"
            android:onClick="toggleBrightness"
            android:contentDescription="@string/toggle_brightness_description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="15dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/toggle_brightness_description"
            android:textColor="@android:color/white"
            android:textSize="17sp" />


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/toggle_off"
            android:onClick="hideLuncherIcon"
            android:contentDescription="@string/hide_launcher_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="15dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/hide_launcher_icon"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/hide_icon_description"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </LinearLayout>
